<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/distance_ram"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/editTextDistanceRan"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/distance_covered_by_running"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:textColorHint="#757575"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editTextDistanceSwam"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/distance_covered_by_swimming"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:textColorHint="#757575"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editTextCaloriesConsumed"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/consumed_calories"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:textColorHint="#757575"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/save" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp">

        <TableRow
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/average_distance_ran"
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewStart"
                />


            <TextView
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                android:id="@+id/averageDistRan"
                />

        </TableRow>
        <TableRow
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/average_distance_swam"
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewStart"
                />


            <TextView
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                android:id="@+id/averageDistSwam"
                />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView android:text="@string/average_calories_consumed"
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewStart"
                />


            <TextView
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                android:id="@+id/averageCalories"
                />

        </TableRow>
        <TableRow
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:text="@string/total_distance_ran"
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewStart"
                />


            <TextView
                android:id="@+id/totalDistance"
                android:textColor="@color/black"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                />

        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>